# ChangeLog for dev-python/straight-plugin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> straight-plugin-1.2.ebuild,
  straight-plugin-1.3.ebuild:
  Switched to python-distutils-ng eclass.

*straight-plugin-1.3 (20 Mar 2012)

  20 Mar 2012; James Rowe <jnrowe@gmail.com> +straight-plugin-1.3.ebuild:
  Version bump [577].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> straight-plugin-1.2.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> straight-plugin-1.2.ebuild:
  Removed Python 2.4 support.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> -straight-plugin-1.1.ebuild,
  straight-plugin-1.2.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> straight-plugin-1.2.ebuild:
  Keyworded amd64.

*straight-plugin-1.2 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +straight-plugin-1.2.ebuild:
  Version bump [506].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> straight-plugin-1.1.ebuild:
  Keyworded x86.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> straight-plugin-1.1.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com> straight-plugin-1.1.ebuild:
  Keyworded ~x86.

*straight-plugin-1.1 (01 Jul 2011)

  01 Jul 2011; James Rowe <jnrowe@gmail.com> +straight-plugin-1.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [338].
