@@ -19,9 +19,3 @@ DEPEND=""
 RDEPEND=""
 
 DOCS=(README)
-
-src_install() {
-	default
-
-	python-distutils-ng_src_install
-}
